<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenDialer</string>
    <string name="contact_image_desc">Contact image</string>
    <string name="contact_pic_description">Contact image</string>
    <string name="action_call_desc">Call contact</string>
    <string name="back_button_desc">Delete</string>
    <string name="action_search_contacts">Search</string>
    <string name="contacts_page_title">Contacts</string>
    <string name="call_log_page_title">Recents</string>
    <string name="make_call_to_label">Make a call to</string>
    <string name="favorites_page_title">Favourites</string>

    <!--Dialer-->
    <string name="keypad_0">0</string>
    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="keypad_star">*</string>
    <string name="keypad_hash">#</string>
    <string name="keypad_2_letters">ABC</string>
    <string name="keypad_3_letters">DEF</string>
    <string name="keypad_4_letters">GHI</string>
    <string name="keypad_5_letters">JKL</string>
    <string name="keypad_6_letters">MNO</string>
    <string name="keypad_7_letters">PQRS</string>
    <string name="keypad_8_letters">TUV</string>
    <string name="keypad_9_letters">WXYZ</string>
    <string name="keypad_0_letters">+</string>

    <string name="starred_contact_desc">Contact is a favorite</string>
    <string name="frequent_contact_desc">Contact is a frequent contact</string>

    <!--errors-->
    <string name="error_missing_contacts_permission">This app needs permission to read contacts, click here to enable permission</string>
    <string name="error_missing_contacts_permission_search">This feature needs permission to read contacts</string>
    <string name="error_missing_contacts_permission_search_action">Click here to enable permission</string>

    <string name="error_missing_call_log_permission">This app needs <b>call and contact permissions</b> in order to access your recent calls, click here to enable permission</string>
    <string name="context_menu_copy">Copy to clipboard</string>
    <string name="analytics_favorites_screen">Favorites</string>

</resources>